--- a/TFSPeekerDesktop/TFSPeeker.csproj
+++ b/TFSPeekerDesktop/TFSPeeker.csproj
@@ -5,12 +5,13 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7F8AA065-598C-48CD-B736-4DA72D3450D4}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>TFSPeekerDesktop</RootNamespace>
-    <AssemblyName>TFSPeekerDesktop</AssemblyName>
+    <OutputType>Library</OutputType>
+    <RootNamespace>TFSPeeker</RootNamespace>
+    <AssemblyName>TFSPeeker</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -30,6 +31,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.IdentityModel.Clients.ActiveDirectory, Version=2.22.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -162,7 +167,9 @@
       <HintPath>..\packages\Newtonsoft.Json.6.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.IdentityModel.Tokens.Jwt, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.4.0.0\lib\net45\System.IdentityModel.Tokens.Jwt.dll</HintPath>
     </Reference>
@@ -171,9 +178,11 @@
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Http, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.2\lib\net45\System.Web.Http.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -182,18 +191,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigurationConstants.cs" />
     <Compile Include="ConsoleFormatter.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="IApplication.cs" />
+    <Compile Include="Interrogation\ApplicationContext.cs" />
+    <Compile Include="ArgumentParser.cs" />
+    <Compile Include="ConfigurationConstants.cs" />
+    <Compile Include="Interrogation\IInterrogator.cs" />
+    <Compile Include="Interrogation\ViewResult.cs" />
+    <Compile Include="Interrogation\ViewResultBuilder.cs" />
+    <Compile Include="AppConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestCaseDescription.cs" />
-    <Compile Include="TestCaseViewFactory.cs" />
-    <Compile Include="Views\IView.cs" />
-    <Compile Include="Views\View.cs" />
+    <Compile Include="Interrogation\SubscriptionManager.cs" />
+    <Compile Include="Interrogation\TestCaseDescription.cs" />
+    <Compile Include="Interrogation\TestPlanDataSetFactory.cs" />
+    <Compile Include="Interrogation\DataSet.cs" />
+    <Compile Include="Interrogation\TfsApiInterrogator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
