Friday night improvements
- Added a new icon.
- Improved the look and feel of the app.
- Removed the ugly windows border and implemented own minimize/close buttons.

--- a/Desktop/Desktop.csproj
+++ b/Desktop/Desktop.csproj
@@ -115,5 +115,8 @@
       <Name>TFSPeeker</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
